# AJYui_MotorBrakeModule

./: .gitignore  README.md
DataManager_Shield/: .step  Connectors.kicad_sch  DataManager_Shield.csv  DataManager_Shield.kicad_pcb  DataManager_Shield.kicad_prl  DataManager_Shield.kicad_pro  DataManager_Shield.kicad_sch  Relays.kicad_sch  aux_pins.kicad_sch  ~DataManager_Shield.kicad_sch.lck
DataManager_Shield/3D/: 0039300160.stp
DataManager_Shield/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
MotorBrake_Firmware/.metadata/: .log4j2.xml  version.ini
MotorBrake_Firmware/MotorBrake_Firmware/: .mxproject  .project  MotorBrake_Firmware Debug.launch  MotorBrake_Firmware.ioc
MotorBrake_Firmware/MotorBrake_Firmware/Debug/: MotorBrake_Firmware.elf  MotorBrake_Firmware.list  MotorBrake_Firmware.map  makefile  objects.list
MotorBrake_Firmware/MotorBrake_Firmware/ros2_bridge/motorbrake_bridge/: package.xml  setup.py
MotorBrake_Firmware/MotorBrake_Firmware/ros2_bridge/motorbrake_bridge/motorbrake_bridge/: brake_bridge.py
MotorBrake_Firmware/MotorBrake_Firmware_Car_Shield/: .cproject  .mxproject  .project  MotorBrake_Firmware_Car_Shield.ioc
MotorBrake_PCB/: MCU.kicad_sch  MotorBrake_PCB.kicad_pcb  MotorBrake_PCB.kicad_prl  MotorBrake_PCB.kicad_pro  MotorBrake_PCB.kicad_sch  PSU.kicad_sch  ServoBrake.kicad_sch  aux_pin.kicad_sch  can_transceiver.kicad_sch
MotorBrake_PCB/3D/: 65800001009.stp  DIP Red 2-way.step  T9A_Code-1_Form-C.STEP  User Library-XT30-PB.STEP  User Library-xt30upb-m.STEP  XT30PB.STEP  nucleoWithShield.iam
(+163 files in other folders)
