<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motorbrake_bridge</name>
  <version>0.1.0</version>
  <description>Bridges STM32 MotorBrake CAN frames to/from ROS 2 topics (/brake_command, /brake_status).</description>
  <maintainer email="anawach.claude@gmail.com">anawach</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>motorbrake_msgs</exec_depend>
  <exec_depend>python3-can</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
